--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -142,6 +142,6 @@ Chaque élément de ce type prend une valeur de type \texttt{com.badlogic.gdx.gr
 \clearpage
 
 \section{Conclusion}
-Bien que l'implémentation d'une chaîne de responsabilité dans le jeu était l'objectif principal du projet, deux patrons de conception supplémentaires se sont naturellement glissés dans le code, contribuant à la clarté de la structure du programme. Cette dernière est restée simple car le jeu lui-même est minimaliste et quatre autres projets requéraient également du temps de travail.
+Bien que l'implémentation d'une chaîne de responsabilité dans le jeu était l'objectif principal du projet, un autre patron de conception (singleton) s'est naturellement glissés dans le code, contribuant à la clarté de la structure du programme. Cette dernière est restée simple car le jeu lui-même est minimaliste et quatre autres projets requéraient également du temps de travail.
 
 \end{document}
