Saved the fucking WORLD

--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -86,11 +86,11 @@ CoRe (pour ``Chain of Responsability'') est un jeu de type \textit{shoot'em up} 
 
 Pour tirer un projectile, il faut appuyer sur les touches J, K ou L. Chacune de ces touches tire une couleur différente, et il est possible des mélanger ces couleurs pour en créer de nouvelles. Si on mélange les trois couleurs à la fois, la couleur résultant est le noir.\\
 
-Le premier type d'obstacle est \textbf{l'astéroïde}. Afin de détruire un astéroïde, il faut tirer dessus avec la couleur qui lui correspond (un astéroïde rouge demandera un tir rouge). S'il explose, une réaction en chaîne (gérée par le patron chaîne de responsabilité) est déclenchée. Dans ce cas, l'objet le plus proche est lui aussi touché par la même couleur. Il se peut alors qu'ilexplose à son tour dans le cas ou la couleur est appropriée, et ainsi de suite \ldots\\
+Le premier type d'obstacle est \textbf{l'astéroïde}. Afin de détruire un astéroïde, il faut tirer dessus avec la couleur qui lui correspond (un astéroïde rouge demandera un tir rouge). S'il explose, une réaction en chaîne (gérée par le patron chaîne de responsabilité) est déclenchée. Dans ce cas, l'objet le plus proche est lui aussi touché par la même couleur. Il se peut alors qu'il explose à son tour dans le cas ou la couleur est appropriée, et ainsi de suite\ldots\\
 
 Le second type d'obstacle est \textbf{le bloc de glace}. Afin de détruire un bloc de glace, il faut qu'il soit touché par une réaction en chaîne de n'importe quelle couleur. Tirer dessus directement n'a pas d'effet. Lorsqu'il explose, il transforme la couleur reçue en blanc avant de continuer la réaction en chaîne. Le blanc détruit les astéroïdes de n'importe quelle couleur, ce qui a pour effet de faire exploser tous les astéroïdes de l'écran.\\
 
-\textbf{Les satellites}, notre troisième type d'obstacle, ne réagissent que lorsqu'ils reçoivent du noir, lançant deux réactions en chaîne de couleur aléatoire (une chaude et une froide) en direction de l'objet le plus proche. Ils explosent après avoir reçu 20 tirs noirs.\\
+\textbf{Les satellites}, notre troisième type d'obstacle, ne réagissent que lorsqu'ils reçoivent du noir, lançant deux réactions en chaîne de couleur aléatoire, soit chaude (Jaune Orange Rouge), soit froide (Bleu Vert Violet) en direction de l'objet le plus proche. Ils explosent après avoir reçu 20 tirs noirs.\\
 
 Afin de ne pas rendre les réactions en chaîne trop rares, il a été décidé que les astéroïdes apparaissent par groupe de couleur chaudes ou froides. Il y a donc plus de chance d'avoir deux objets adjacents de la même couleur que si leur couleur était parfaitement aléatoire. La difficulté du jeu croît à mesure que le temps passe (de plus en plus d'obstacles apparaissent), et un score est affiché comme indicateur de la performance du joueur.
 
