Centered and resized class diagram.

--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -117,9 +117,10 @@ Deuxièmement, ces entités ne se ressemblent pas au niveau conceptuel. Un satel
 
 \section{Diagramme de classes}
 
-\includegraphics[width=\paperwidth,height=\paperheight,keepaspectratio,angle=90,origin=c]{uml_cor.jpg}
-
-\clearpage
+\begin{center}
+    \noindent
+    \includegraphics[width=0.74\pageheight, height=\linewidth,keepaspectratio,angle=90,origin=c]{uml_cor.pdf}
+\end{center}
 
 \section{Patrons de conception}
 \subsection{Chaîne de responsabilité}
